-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 2, 5.0.0
-
None
-
Windows 7
-
c1197677901648893856084178291078035f2bc2
QCompleter popup captures the mouse and doesn't release when clicked outside the popup as one would expect. There is no similar problem with popup menus or combo boxes.
- relates to
-
QTBUG-70437 Scrollbars on QWebEngineViews do not react to releasing the mouse button outside of the application window
-
- Closed
-
For Gerrit Dashboard: QTBUG-27283 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
35692,5 | Fix Windows mouse enter/leave event generation | master | qt/qtbase | Status: MERGED | +2 | 0 |